--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
-  "headers": [
-    {
-      "source": "/(.*).usdz",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "model/vnd.usdz+zip"
-        }
-      ]
-    }
+  "rewrites": [
+    { "source": "/uploads/:path*", "destination": "/uploads/:path*" }
   ]
 }
